<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.login.LoginActivity">

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_welcome"
        app:layout_constraintBottom_toTopOf="@id/tv_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />


    <TextView
        android:id="@+id/tv_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textSize="20sp"
        android:text="@string/login_tv_id"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <EditText
        android:id="@+id/et_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/login_et_id"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_ID">

    </EditText>

    <TextView
        android:id="@+id/tv_PW"
        android:text="@string/login_tv_pw"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/et_PW"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/login_et_pw"
        app:layout_constraintTop_toBottomOf="@id/tv_PW" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_btn_login"
        app:layout_constraintTop_toBottomOf="@id/et_PW"/>

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_btn_signup"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>