<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.signup.SignupActivity">

    <data>
        <variable
            name="vm"
            type="org.android.go.sopt.presentation.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signup_tv_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/join_tv_singup"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/signup_tv_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/signup_tv_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/login_tv_id"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/signup_tv_head" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/idInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_tv_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_et_id"
                android:hint="@string/login_et_id"
                android:inputType="text"
                android:afterTextChanged="@{(text) -> vm.validateId(text.toString())}"
                android:text="@={vm._id}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/signup_tv_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_tv_pw"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/idInputLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pwInputLayout"
            style="@style/TextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_tv_pw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_et_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(text) -> vm.validatePassword(text.toString())}"
                android:hint="@string/login_et_pw"
                android:inputType="textPassword"
                android:text="@={vm._password}" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/signup_tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/join_tv_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/pwInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameInputLayout"
            style="@style/TextInputLayoutStyle"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_tv_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{(text) -> vm.validateName(text.toString())}"
                android:hint="@string/join_et_name"
                android:inputType="text"
                android:text="@={vm._name}" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/signup_tv_special"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/join_tv_special"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/nameInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutStyle"
            android:hint="@string/join_et_special"
            android:id="@+id/specialityInputLayout"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_tv_special">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_et_special"
                style="@style/TextInputLayoutStyle"
                android:inputType="text"
                android:afterTextChanged="@{(text) -> vm.validateSpeciality(text.toString())}"
                android:text="@={vm._speciality}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:paddingVertical="15dp"
            android:enabled="false"
            android:text="@string/login_btn_signup"
            app:layout_constraintTop_toBottomOf="@id/specialityInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>



